10878 - changes from nick's branch to fix the z-index issues

--- a/styles/components/table/_table.scss
+++ b/styles/components/table/_table.scss
@@ -29,7 +29,7 @@ table.usda-table {
         td.usda-table__cell.stickyColumn {
             position: sticky;
             left: 0;
-            z-index: 30;
+            z-index: 1;
             border-right: solid 1px $gray-cool-10;
             box-shadow: $shadow-sm;
         }
