--- a/styles/components/table/_tableHeader.scss
+++ b/styles/components/table/_tableHeader.scss
@@ -70,7 +70,6 @@ th.table-header {
 .stickyColumn:first-of-type {
     position: sticky;
     left: 0;
-    z-index:30;
+    z-index: 1;
     border-right: solid 1px $gray-cool-10;
-    box-shadow: $shadow-sm;
 }
